--- a/Frontend/ChatInterface/.gitignore
+++ b/Frontend/ChatInterface/.gitignore
@@ -27,6 +27,8 @@ yarn-error.log
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+# Ignorer tout le dossier d'environnement local
+src/environnement/
 
 # Miscellaneous
 /.angular/cache
