--- a/Frontend/ChatInterface/package.json
+++ b/Frontend/ChatInterface/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.15",
+    "ngx-cookie-service": "^20.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.15",
