--- a/Frontend/ChatInterface/package.json
+++ b/Frontend/ChatInterface/package.json
@@ -30,10 +30,12 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/postcss": "^4.1.15",
     "ngx-cookie-service": "^20.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -43,6 +45,7 @@
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
